lab1_ws/lab1_ws/log/build_2024-10-09_11-43-07/lab1_pkg/stderr.log
  File "/home/nadilgunawardane/lab1_ws/install/lab1_pkg/lib/python3.10/site-packages/lab1_pkg/talker.py", line 19
    def publish_drive_message(self)
                                   ^
SyntaxError: expected ':'

